--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: "3.6"
 
 services:
   api_server:
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: api-server
-    image: jazzdd/alpine-flask:python3
+    image: python:3.9.5
     ports:
       - "80:80"
       - "5000:5000"
     restart: unless-stopped
-    volumes:
-      - ./create_endpoints/serializing:/app
